Align Fixes

--- a/Portfolio.Me/Portfolio.Me/portfolio-v2-updated/src/app/collection/_collection.scss
+++ b/Portfolio.Me/Portfolio.Me/portfolio-v2-updated/src/app/collection/_collection.scss
@@ -188,6 +188,9 @@
 .alignItemsCenter {
     align-items: center !important;
 }
+.alignItemsBottom {
+    align-items: flex-end !important;
+}
 .justifyAlignCenter {
     justify-content: center !important;
     align-items: center !important;
